# quant-engine

./: .deploy_canary  .gitignore  .mcp.json  AGENTS.md  README.md  pyproject.toml  skills-lock.json
.claude/agents/: live-systems-engineer.md  market-data-engineer.md  orchestrator.md  platform-engineer.md  quant-researcher.md  risk-auditor.md  strategy-engineer.md
.claude/commands/: optimize-strategy.md
.claude/plans/: aggregate-position-refactor.md  vps_stability_migration_plan_vps.md  vps_stability_migration_plan_wsl.md
.claude/skills/: process-cleanup
.cursor/: mcp.json
.github/workflows/: deploy-vps.yml  test.yml
.graphify/: graph_report.md
config/: engine.toml  prediction.toml  taifex.toml
config/portfolios/: tmf_bnh_beater_500k.toml  tx_4strategy.toml  tx_mtf_compounding_3leg.toml
config/strategies/: mt_bb_mean_reversion.toml  mt_donchian_trend_strength.toml  st_intraday_max_long.toml  st_night_session_long.toml  st_spread_reversion.toml  tmf_500k_bnh_beater.toml
docs/: TODO.md  TRD-Core-Quant-Engine.md  architectural-review-event-driven.md  architecture.md  closed-loop-optimizer-rollout.md  docs-map.md  intraday-live-operations.md  live-trading-gap-analysis.md  live-trading-readiness-audit.md  migration-impact-report.md  night-session-investigation.md  optimization-signoff-checklist.md  risk-auditor-signoff-holding-period-dispatch.md  roadmap.md  specs.md  strategies.md  structure.md  tailscale-setup.md  tasks.md  tech-stack.md  tmf-100k-optimization-results.md  txo_screener_design.md  txo_verification_checklist.md
docs/analysis/: execution_bug_fix_options.md
docs/handoff/: 2026-05-07-phase-d-aborted.md  2026-05-08-mode-aware-guard-todo.md  2026-05-08-segv-hypothesis.md  2026-05-18-overnight-paper-portfolio.md
docs/research/: taiex_taifex_basis_2020_2026.md
experiments/: intraday_vs_gap.py
frontend/: .package-lock.sha256  check-equity.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: quant-vps-smoke.spec.ts  warroom-playback.spec.ts  warroom-spread-playback.spec.ts  warroom.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
graphify-out/: GRAPH_REPORT.md
openspec/: config.yaml
scripts/: backfill_aggregated_bars.py  backfill_strategy_meta.py  crawl_taifex.py  deploy.sh  intraday_vs_gap.py  optimize_ema.py  optimize_strategies.py  quick_optimize.py  resource-monitor.service  resource_monitor.py  run-dev.sh  run-prod.sh  run_data_daemon.py  setup-paper-sessions.py  setup-tailscale-dashboard.sh  setup-wsl-ray.sh  sync-vps-data.sh  verify_playback.py  verify_strict.py  vps-watchdog.py  vps_self_watchdog.py  warroom_wipe_mock.py
scripts/deploy/: caddyfile.tailscale  logrotate.quant-engine  quant-engine-api.service  quant-engine-frontend-dev.service  quant-ray-head.service  quant-vps-self-watchdog.service  taifex-data-daemon.service
scripts/research/: analyze_basis.py  crawl_basis_data.py  plot_basis_vs_return.py
src/adapters/: taifex.py
src/alerting/: dispatcher.py  formatters.py
src/api/: deps.py  editor.py  helpers.py  main.py
src/audit/: __init__.py  store.py  trail.py
src/bar_simulator/: USAGE.md  __init__.py  entry_checker.py  models.py  price_sequence.py  simulator.py  stop_checker.py
src/broker_gateway/: __init__.py  _shioaji_patch.py  abc.py  account_db.py  live_bar_store.py  live_spread_buffer.py  mock.py  registry.py  sinopac.py  types.py
src/core/: adapter.py  clock.py  kelly_sizer.py  policies.py  portfolio_merger.py  portfolio_optimizer.py  portfolio_store.py  position_engine.py  sizing.py  types.py
src/dashboard/: app.py  callbacks.py  editor.py  helpers.py  theme.py
src/data/: __main__.py  aggregator.py  bar_builder.py  connector.py  contracts.py  crawl.py  crawl_cli.py  daemon.py  db.py  feature_store.py  gap_detector.py  gap_repair.py  margin_scraper.py  multi_timeframe_router.py  options_crawl.py  pit.py  session_utils.py  settlement_calendar.py  spread_monitor.py  stitcher.py
src/execution/: bar_source.py  contract_roller.py  disaster_stop_monitor.py  engine.py  live.py  live_execution_engine.py  live_pipeline.py  live_strategy_runner.py  paper.py  paper_execution_engine.py  portfolio_kill_switch.py  strategy_warmup.py
src/indicators/: __init__.py  adx.py  atr.py  bollinger.py  cmf.py  daily_close_stream.py  dd_circuit_breaker.py  donchian.py  ema.py  fisher_transform.py  hurst.py  itrend.py  keltner.py  linear_regression.py  macd.py  mfi.py  obv.py  parabolic_sar.py  realized_vol.py  roc.py  rolling_zscore.py  rsi.py  sma.py  stc.py  stochastic.py  supertrend.py  true_atr.py  twap.py  volume_profile.py  vwap.py  williams_r.py
src/mcp_server/: __init__.py  __main__.py  cross_contract_check.py  facade.py  history.py  server.py  tools.py  validation.py
src/monitoring/: __init__.py  correlation_monitor.py
src/monte_carlo/: block_bootstrap.py
src/oms/: __init__.py  oms.py  order_state_store.py  volume_profile.py
src/pipeline/: config.py  logging.py  optimizer.py  runner.py
src/prediction/: combiner.py  direction.py  engine.py  features.py  regime.py  tracking.py  volatility.py
src/reconciliation/: reconciler.py
src/research/: __init__.py  ray_client.py  ray_executor.py
src/risk/: exposure_aggregator.py  feed_watchdog.py  monitor.py  portfolio.py  pre_trade.py  var_engine.py
tests/: conftest.py  test_alerting.py  test_api_accounts.py  test_api_backtest.py  test_api_ohlcv.py  test_api_strategies.py  test_backtester.py  test_bar_builder.py  test_connector.py  test_crawl.py  test_db.py  test_editor_io.py  test_execution.py  test_execution_bug_reproduction.py  test_feature_store.py  test_live_executor_e2e.py  test_margin_scraper.py  test_metrics.py  test_monte_carlo.py  test_optimizer.py  test_param_registry.py  test_pipeline.py  test_policy_e2e.py  test_prediction_combiner.py  test_prediction_direction.py  test_prediction_engine.py  test_prediction_regime.py  test_prediction_volatility.py  test_reconciler.py  test_scanner.py  test_session_db.py  test_stress.py  test_taifex_adapter.py  test_types.py  test_ws_live_feed.py
(+724 files in other folders)
