[project]
name = "quant-engine"
version = "0.1.0"
description = "Market-agnostic quantitative trading engine"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "polars>=1.0",
    "pyarrow>=17.0",
    "pandas>=2.2",
    "pandas-ta>=0.3",
    "scipy>=1.13",
    "sqlalchemy>=2.0",
    "lightgbm>=4.0",
    "optuna>=3.6",
    "hmmlearn>=0.3",
    "arch>=7.0",
    "scikit-learn>=1.5",
    "mlflow>=2.14",
    "structlog>=24.0",
    "httpx>=0.27",
    "google-cloud-secret-manager>=2.20",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "tomli-w>=1.2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=14.0",
]

[project.optional-dependencies]
taifex = ["shioaji>=1.0"]
mcp = ["mcp>=1.26"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "mypy>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/api/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "hmmlearn.*",
    "lightgbm.*",
    "optuna.*",
    "arch.*",
    "mlflow.*",
    "pandas_ta.*",
    "shioaji.*",
    "streamlit.*",
    "structlog.*",
    "google.cloud.*",
    "google.api_core.*",
    "fastapi.*",
    "uvicorn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring live external services (deselect with '-m not integration')",
    "e2e: end-to-end tests",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "mypy>=1.14",
]
